@@ -436,6 +436,21 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
         }
       end
 
+      specs << {
+        "authors" => "Chad Fowler, Rich Kilmer, Jim Weirich, Eric Hodel and others",
+        "dependencies" => [],
+        "doc_path" => "/doc_root/rubygems-#{Gem::RubyGemsVersion}/rdoc/index.html",
+        "executables" => [{"executable" => 'gem', "is_last" => true}],
+        "only_one_executable" => true,
+        "full_name" => "rubygems-#{Gem::RubyGemsVersion}",
+        "has_deps" => false,
+        "homepage" => "http://rubygems.org/",
+        "name" => 'rubygems',
+        "rdoc_installed" => true,
+        "summary" => "RubyGems itself",
+        "version" => Gem::RubyGemsVersion,
+      }
+
       specs = specs.sort_by { |spec| [spec["name"].downcase, spec["version"]] }
       specs.last["is_last"] = true
 
